fix overflow

--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -217,7 +217,7 @@
 .textContent{
     margin-top: 3%;
     position: relative;
-    width: 85%;
+    width: 80%;
     align: justify;
 }
 #textContent1{
